--- a/titato.html
+++ b/titato.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" media="screen" href="/css/titato.css">
-        <title>TTT - Step-by-Step</title>
-        <link rel="stylesheet" href="titato.css">
+        <title>Generic Game</title>
+        <link rel="stylesheet" href="DemoTTT.css">
     </head>
     <body>
         <center>
@@ -28,8 +28,13 @@
                 <div id="resetbtn">
                     <button id=reset onclick="resetGame()">RESET</button>
                 </div>
+                <div id="homebtn">
+                    <a href="DemoHome.html">
+                        <button id=demohome onclick="resetGame()">HOME</button>
+                    </a>
+                </div>
             </div>
         <center>
-    <script src="titato.js"></script>
+    <script src="DemoTTT.js"></script>
     </body>
 </html>
